<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">买家网</string>
    <string name="app_name_url">Buyers</string>
    <string name="viewpager_indicator">%1$d / %2$d</string>
    <string name="cancel">取消</string>
    <string name="add_from_gallery">上传照片</string>
    <string name="camera">拍摄照片</string>
    <string name="text_take_photo">拍照</string>
    <string name="text_from_album">手机相册选择</string>
    <string name="text_cancel">取消</string>
    <string name="home_buyers">消息</string>
    <string name="home_contact">通讯录</string>
    <string name="home_find">发现</string>
    <string name="home_my">我的</string>
    <string name="header_hint_refresh_normal">下拉可以刷新</string>
    <string name="header_hint_refresh_ready">松开立即刷新</string>
    <string name="header_hint_refresh_loading">正在刷新数据中&#8230;</string>
    <string name="header_hint_refresh_time">时间：</string>
    <string name="footer_hint_load_normal">加载更多数据</string>
    <string name="footer_hint_load_ready">松开加载更多</string>
    <string name="login_login_btn">登录</string>
    <string name="login_register_btn">注册</string>
    <string name="login_forgetpassword_btn">忘记密码？</string>
    <string name="login_edpwd_btn">请输入密码</string>
    <string name="login_edphone_btn">手机号码</string>
    <string name="login_address_tv">国家/地区</string>
    <string name="login_title">手机号登录</string>
    <string name="login_cancel">取消</string>
    <string name="register_title">请输入您的手机号码</string>
    <string name="register_register_btn">登录</string>
    <string name="register2_title">短信验证码已发送，请填写验证码</string>
    <string name="register_phone_tv">手机号</string>
    <string name="register_code_tv">验证码</string>
    <string name="register_pwd_tv">密码</string>
    <string name="register_pwd_ed">请填写密码</string>
    <string name="register_btn">注册</string>
    <string name="register_ok_btn">完成</string>
    <string name="register2_code_time">接收短信大约需要60秒</string>
    <string name="discovery_friends">买家圈</string>
    <string name="discovery_scanning">扫一扫</string>
    <string name="discovery_shaking">摇一摇</string>
    <string name="discovery_nearby_buyer">附近的商家</string>
    <string name="discovery_shopping">购物</string>
    <string name="discovery_business_in">商家入驻</string>
    <string name="me_buyer">买家号 :</string>
    <string name="me_name">姓名</string>
    <string name="me_album">相册</string>
    <string name="me_collection">收藏</string>
    <string name="me_pocket">钱包</string>
    <string name="me_about">关于</string>
    <string name="me_setting">设置</string>
    <string name="me_face">表情</string>
    <string name="me_MassAdvertising">群发广告</string>
    <string name="me_Advertising_manager">广告管理</string>
    <string name="me_SendInvitation">发送邀请</string>
    <string name="me_invitationManager">邀请管理</string>
    <string name="me_OnlineService">在线客服</string>
    <string name="add_bankcard_tips">请确保姓名、身份证、银行卡开户人为同一人</string>
    <string name="add_bankcard_name">真实姓名</string>
    <string name="add_bankcard_id">身份证号</string>
    <string name="add_bankcard_bank_name">开户银行</string>
    <string name="add_bankcard_card_number">银行卡号</string>
    <string name="add_bankcard_please_choose_bank">请选择开户行</string>
    <string name="add_bankcard_please_input_username_of_card">请输入持卡人姓名</string>
    <string name="add_bankcard_please_input_id_number">请填写身份证号</string>
    <string name="add_bankcard_please_input_card_number">请填写银行卡号</string>
    <string name="add_bankcard_button_add">确认添加</string>
    <string name="small_video_tip">朋友圈自动播放小视频</string>
    <string name="small_video_3G4G_and_wifi">3G/4G和Wi-Fi</string>
    <string name="small_video_only_wifi">仅Wi-Fi</string>
    <string name="small_video_close">关闭</string>
    <string name="personal_head">头像</string>
    <string name="personal_name">名字</string>
    <string name="personal_buyer_number">买家号</string>
    <string name="personal_two_code">我的二维码</string>
    <string name="personal_my_address">我的地址</string>
    <string name="personal_sexy">性别</string>
    <string name="personal_area">地址</string>
    <string name="personal_sign">个性签名</string>
    <string name="personal_hobby">爱好</string>
    <string name="personal_job">职业</string>
    <string name="personal_age">年龄</string>
    <string name="personal_label">标签</string>
    <string name="redbag_ping_shou_qi">拼手气红包</string>
    <string name="redbag_normal">普通红包</string>
    <string name="redbag_tips">对方可领取的红包金额为0.01~200元</string>
    <string name="me_settings_multiple_language">多语言</string>
    <string name="me_settings_my_face">我的表情</string>
    <string name="me_settings_friends_small_videos">朋友圈小视频</string>
    <string name="me_settings_storage_space">存储空间</string>
    <string name="me_settings_empty_talk_history">清空聊天记录</string>
    <string name="change_address_shou_huo_ren">收货人</string>
    <string name="change_address_hint_name">姓名</string>
    <string name="change_address_phone_number">手机号码</string>
    <string name="change_address_hint_phone_number">11位手机号</string>
    <string name="change_address_choose_area">选择地区</string>
    <string name="change_address_detail_address">详细地址</string>
    <string name="change_address_hint_street_gate_">街道门牌信息</string>
    <string name="change_address_postcode">邮政编码</string>
    <string name="change_address_hint_area_infomation">地区信息</string>
    <string name="money_recharge_card">储蓄卡</string>
    <string name="money_recharge_amount_of_money">金额(元)</string>
    <string name="money_recharge_hint_please_input_amount">请输入金额</string>
    <string name="money_recharge_max_account_day">单日交易限额 ￥</string>
    <string name="money_recharge_button_text">下一步</string>
    <string name="pocket_small_money">金额(元)</string>
    <string name="pocket_bank_id">银行卡(张)</string>
    <string name="pocket_buyer_service">买家服务</string>
    <string name="pocket_transfer">转账</string>
    <string name="pocket_phone_recharge">充值</string>
    <string name="pocket_buyer_red_bag">买家红包</string>
    <string name="pocket_phone_withdrawals">提现</string>
    <string name="me_my_address_addaddress">新增地址</string>
    <string name="new_message_show_detail">通知显示消息详情</string>
    <string name="new_message_show_detail_tips">关闭后，当收到消息时，通知提示将不显示发信人和内容摘要</string>
    <string name="new_message_audio">声音</string>
    <string name="new_message_shake">震动</string>
    <string name="new_message_doyouneed_audio_or_shake">运行时，你可以设置是否需要声音或者震动</string>
    <string name="new_message_buyercircle_picture_update">买家圈照片更新</string>
    <string name="new_message_buyercircle_picture_update_tips">关闭后，有朋友更新照片时，界面下面的"发现"按钮上不再出现红点提示。</string>
    <string name="say_hi_tips">说句话打个招呼</string>
    <string name="nearby_people">查看附近的商家</string>
    <string name="nearby_people_text_1">你收到</string>
    <string name="nearby_people_text_2">条新的招呼</string>
    <string name="withdraw_cash_to_bank">到账银行卡</string>
    <string name="withdraw_cash_account">提现金额</string>
    <string name="withdraw_cash_rest_money">当前余额</string>
    <string name="withdraw_cash_withdraw_all">   全部提现</string>
    <string name="withdraw_cash_withdraw">提现</string>
    <string name="withdraw_cash_withdraw_fuhao">￥</string>
    <string name="storage_wechat_have_used">微信已用空间</string>
    <string name="storage_phone_have_used">手机已用空间</string>
    <string name="storage_zhan_shou_ji">占据手机</string>
    <string name="storage_cun_chu_space">存储空间</string>
    <string name="storage_clean_wechat">清理微信</string>
    <string name="storage_shen_yu">剩余</string>
    <string name="storage_keyong_space">可用空间</string>
    <string name="storage_manage_phone_space">管理手机空间</string>
    <string name="add_me_way_tip">可以通过以下方式找到我：</string>
    <string name="add_me_way_phone">手机号</string>
    <string name="add_me_way_qq">QQ号</string>
    <string name="add_me_way_wechat">微信号</string>
    <string name="add_me_way_tip2">关闭后，其他用户将不能通过上述信息找到你。</string>
    <string name="add_me_way_tip3">可以通过以下方式添加我：</string>
    <string name="add_me_way_qunliao">群聊</string>
    <string name="add_me_way_twocode">我的二维码</string>
    <string name="add_me_way_namecard">名片</string>
    <string name="private_settings_tip1">加我为朋友时需要验证</string>
    <string name="private_settings_tip2">添加我的方式</string>
    <string name="private_settings_tip3">向我推荐通讯录朋友</string>
    <string name="private_settings_tip4">开启后，为你推荐已开通手机联系人</string>
    <string name="private_settings_tip5">通讯录黑名单</string>
    <string name="private_settings_tip6">不让他(她)看我的买家圈</string>
    <string name="private_settings_tip7">不看他(她)的买家圈</string>
    <string name="private_settings_tip8">允许陌生人查看十张照片</string>
    <string name="my_two_code_tip">扫一扫上面的二维码，加我好友</string>
    <string name="search_header">搜</string>
    <string name="shop_name">店铺名称</string>
    <string name="shop_address">店铺地址</string>
    <string name="shop_phone">店铺电话</string>
    <string name="shop_license">营业执照</string>
    <string name="shop_coperate_image">法人图片</string>
    <string name="shop_add_image">添加名片或相关图片</string>
    <string name="shop_add_more">添加更多</string>
    <string name="red_bag">买家红包</string>
    <string name="sent_bag_text1">发出红包</string>
    <string name="sent_bag_text2">个</string>
    <string name="sent_bag_type">普通红包</string>
    <string name="sent_bag_yuan">元</string>
    <string name="sent_bag_ge">已领完个</string>
    <string name="total_sent_gongfachu">共发出</string>
    <string name="total_received_gongshoudao">共收到</string>
    <string name="please_choose">请选择</string>
    <string name="sure">确定</string>
    <string name="received_redbag_shoudaohongbao">收到红包</string>
    <string name="received_redbag_shoujizuijia">手气最佳</string>
    <string name="rights_public">公开</string>
    <string name="rights_private">私密</string>
    <string name="rights_part_see">部分可见</string>
    <string name="rights_no_open_to_who">不给谁看</string>
    <string name="rights_all_see">所有朋友可见</string>
    <string name="rights_only_me">仅自己可见</string>
    <string name="rights_selected_see">选中的朋友可见</string>
    <string name="rights_selected_no_see">选中的朋友不可见</string>
    <string name="recharge_chonghuafei">充话费</string>
    <string name="sell_price">售价</string>
    <string name="add_bankcard_text">添加银行卡</string>
    <string name="id_safe">帐号与安全</string>
    <string name="new_message_notification">新消息通知</string>
    <string name="normal">通用</string>
    <string name="private_txt">隐私</string>
    <string name="suggestion_feedback">建议反馈</string>
    <string name="logout_txt">退   出</string>
    <string name="buyer_number_txt">买家号</string>
    <string name="phone_txt">手机号</string>
    <string name="qq_txt">QQ号</string>
    <string name="email_txt">邮箱地址</string>
    <string name="day_before">天前</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
</resources>