<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_take_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_46"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/text_take_photo"
        android:textColor="@color/title_bar_right_text_done"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/ui_bg" />

    <TextView
        android:id="@+id/tv_from_album"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_46"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/text_from_album"
        android:textColor="@color/title_bar_right_text_done"
        android:layout_marginBottom="10dp"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_46"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/text_cancel"
        android:textColor="@color/title_bar_right_text_done"
        android:textSize="15sp" />

</LinearLayout>
