<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_48">

        <TextView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dimens_48"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:onClick="back"
            android:text="@string/login_cancel"
            android:textColor="#646464" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/view_temp"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="@color/zy_orange"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <!--android:text="18510829660"-->
            <!--android:text="18254215546"-->

            <EditText
                android:id="@+id/et_usertel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:hint="@string/login_edphone_btn"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingLeft="40dp"
                android:singleLine="true"
                android:textColor="#353535"
                android:textColorHint="#909090"
                android:textSize="16sp" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="+86"
                android:textColor="#323232"
                android:textSize="16sp" />

            <!--<View-->
            <!--android:layout_width="0.5dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_marginLeft="80dp"-->
            <!--android:background="#dbdbdb"/>-->

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#fb7b12" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <!--android:text="123456"-->

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:hint="@string/login_edpwd_btn"
                android:maxLength="11"
                android:password="true"
                android:singleLine="true"
                android:textColor="#353535"
                android:textColorHint="#909090"
                android:textSize="16sp" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="密码"
                android:textColor="#323232"
                android:textSize="16sp"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#fb7b12" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/btn_register_bg"
            android:enabled="false"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/login_login_btn"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_32"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgetPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/login_forgetpassword_btn"
                android:textColor="@color/zy_text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_qtlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="10dp"
                android:text="@string/login_register_btn"
                android:textColor="@color/zy_text_color"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>